# ElectricShock-Racing

./: .gitignore  README.md  debug_recompile_and_run.sh  launchctl.sh  recompile_and_run.sh  requirements.txt  start_linux.sh  start_windows.bat
calibration/: calib_params.npz  calibration_parameters.xml  拍照.py  矫正.py  矫正文件转换.py  矫正结果验证.py
lauchcontrol/: app.py
lauchcontrol/templates/: index.html
launchcontrol/: app.py
launchcontrol/presets/: 0预赛稳定_v4.json  正赛稳定蓟县_v1.json  预赛冲刺圈.json
launchcontrol/static/: script.js
sasu_icar2025_demo/res/calibration/: calibration.xml
sasu_icar2025_demo/res/model/yolov3_mobilenet_v1/: io_paddle.json  nms.tar  post.onnx
sasu_icar2025_demo/src/: CMakeLists.txt
sasu_icar2025_demo/src/config/: config.json
sasu_icar2025_demo/src/include/: bridge.hpp  catering.hpp  circle.hpp  common.hpp  controlcenter.hpp  cross.hpp  crossroad.hpp  crosswalk.hpp  imgprocess.hpp  layby.hpp  motion.hpp  obstacle.hpp  parking.hpp  preprocess.hpp  ring.hpp  thread.h  thread.hpp  tracking.hpp  uart.hpp
sasu_icar2025_demo/src/src/: common.cpp  controlcenter.cpp  detection.cpp  icar.cpp  imgprocess.cpp  mapping.cpp  motion.cpp  preprocess.cpp  thread.cpp  uart.cpp
sasu_icar2025_demo/src/src/detection/: bridge.cpp  catering.cpp  crosswalk.cpp  layby.cpp  obstacle.cpp  parking.cpp
sasu_icar2025_demo/src/src/recognition/: circle.cpp  cross.cpp  crossroad.cpp  ring.cpp  tracking.cpp
serial_proxy/: serial_proxy_client.py  serial_proxy_server.py  uart_proxy.py
webcontroller/: uart_car_control.py  uart_proxy.py
webcontroller/static/css/: mobile.css  style.css
webcontroller/static/js/: app.js
webcontroller/templates/: index.html
